# imgen

./: .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml  justfile
.github/workflows/: ci.yml
doc/: CONVENTIONS.md  OPENAI_API.md
src/: api.rs  cli.rs  client.rs  config.rs  main.rs  multipart.rs
src/api/: tests.rs
src/cli/: input.rs  sanitize.rs  spinner.rs
