[package]
name = "imgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
base64 = "*"
clap = { version = "*",  features = ["derive", "env"] }
dotenvy = "*"
env_logger = { version = "*", default-features = false, features = ["auto-color"] }
indicatif = "*"
indicatif-log-bridge = "*"
log = "*"
rand = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
ureq = { version = "*", default-features = false, features = [
    "gzip",
    "json",
    "native-tls",
] }

[dev-dependencies]
tempfile = "*"
