[package]
name = "imgen"
version = "0.1.2"
edition = "2021"
license = "MIT"
documentation = "https://github.com/phlip9/imgen"
homepage = "https://github.com/phlip9/imgen"
repository = "https://github.com/phlip9/imgen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
base64 = "*"
clap = { version = "*",  features = ["derive", "env"] }
directories = "*" # Added for platform-specific config paths
dotenvy = "*"
env_logger = { version = "*", default-features = false, features = ["auto-color"] }
indicatif = "*"
indicatif-log-bridge = "*"
log = "*"
rand = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
# thiserror = "*" # Removed this dependency
ureq = { version = "*", default-features = false, features = [
    "gzip",
    "json",
    "native-tls",
] }

[dev-dependencies]
tempfile = "*"

[profile.release]
codegen-units = 1
debug = "none"
lto = "thin"
panic = "abort"
strip = "symbols"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
